fix vertical align table / max-height otherModulesContainer

--- a/public/css/session.css
+++ b/public/css/session.css
@@ -32,7 +32,7 @@
 
 #modulesTable {
   margin-bottom: 10px;
-  width: 50%;
+  max-width: 50%;
   border-bottom: 1px dotted var(--darkbrown);
 
   i {
@@ -42,6 +42,9 @@
   th,
   td {
     padding: 10px 5px;
+    height: fit-content;
+    /*  */
+    vertical-align: middle;
   }
 
   tbody {
@@ -52,7 +55,7 @@
 }
 
 #otherModulesContainer {
-  width: 50%;
+  max-width: 50%;
   background-color: white;
   border-left: 1px solid var(--darkbrown);
 
@@ -66,9 +69,11 @@
   }
 
   #modules-container {
-    padding: 5px;
+    padding: 5px 0 5px 5px;
     display: flex;
     flex-wrap: wrap;
+    max-height: 500px;
+    overflow-y: scroll;
 
     span {
       background-color: var(--darkbrown);
